Remove volume-meter-header margin and fix hidden div spacing

--- a/src/hey_orac/web/static/css/style.css
+++ b/src/hey_orac/web/static/css/style.css
@@ -139,7 +139,7 @@ body::before {
     display: flex;
     justify-content: flex-end;
     width: 600px;
-    margin-bottom: 10px;
+    margin-bottom: 0px;
 }
 
 .volume-settings-cog {
